# oversample

./: .gitignore  .gitmodules  CNAME  Cargo.toml  gh-release.sh  index.html  oversample-d968c2f7ae733691.js  oversample-ff80af198174fccd.js  package-lock.json  package.json  playwright.config.ts  style-7b5ff0c70b3c4c6a.css  style-eb4a442ccbebc540.css  style.css
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit.sync-conflict-20260311-131608-GCKUTKU.disabled
.github/workflows/: release.yml
e2e/: global-setup.ts  live.spec.ts  pinch.spec.ts  smoke.spec.ts  synthtest.spec.ts  touch.ts  ui.spec.ts
oversample-core/: Cargo.toml
oversample-core/examples/: bit_depth_check.rs  check_wav.rs  check_zc.rs  scan_mic_signatures.rs
oversample-core/src/: bit_depth_certainty.rs  device_hint.rs  lib.rs  types.rs
oversample-core/src/audio/: guano.rs  live_schedule.rs  loader.rs  mod.rs  source.rs  zc.rs
oversample-core/src/canvas/: colormap_2d.rs  mod.rs  spectral_store.rs  tile_cache_core.rs
oversample-core/src/dsp/: agc.rs  audiomoth.rs  bit_analysis.rs  chromagram.rs  effective_nyquist.rs  fft.rs  filters.rs  harmonics.rs  heterodyne.rs  lsb_autocorr.rs  mod.rs  notch.rs  phase_vocoder.rs  pipistrelle.rs  pitch_shift.rs  psd.rs  pulse_detect.rs  resonators.rs  spectral_sub.rs  wsnr.rs
oversample-core/tests/: decode_corpus.rs  mp3_estimate.rs  tf_eval.rs
oversample-core/tests/fixtures/: tone_48k_mono.flac  tone_48k_mono.m4a
oversample-core/tests/golden/: decode_corpus.snapshot
oversample-ipc/: Cargo.toml
oversample-ipc/src/: lib.rs  mic.rs  plugins.rs  xc.rs
src/: annotations.rs  file_identity.rs  focus_stack.rs  format_time.rs  lib.rs  opfs.rs  project.rs  project_store.rs  scope.rs  settings.rs  state.rs  tauri_bridge.rs  test_hook.rs  timeline.rs  types.rs  viewport.rs  web_util.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_decode.rs  cmd_annotations.rs  cmd_audio_files.rs  cmd_mic.rs  cmd_playback.rs  cmd_usb.rs  lib.rs  main.rs  native_playback.rs  plugin_commands.rs  recording.rs  recovery.rs  usb_audio.rs  xc.rs
src/audio/: browser_decode.rs  chunk_params.rs  export.rs  guano.rs  live_recording.rs  loader.rs  mic_backend.rs  microphone.rs  mod.rs  peak.rs  playback.rs  source.rs  streaming_m4a.rs  streaming_mp3.rs  streaming_ogg.rs  streaming_playback.rs  streaming_source.rs  synth_bench.rs  synthetic_mic.rs  video_export.rs  wav_encoder.rs
src/bat_book/: auto_resolve.rs  country_map.rs  data.rs  mod.rs  species.rs  types.rs
src/canvas/: colors.rs  coord.rs  flow.rs  freq_adjustments.rs  gutter_renderer.rs  hit_test.rs  live_waterfall.rs  overlays.rs  spectral_store.rs  spectrogram_renderer.rs  tile_blit.rs  tile_cache.rs  tile_scheduler.rs  waveform_renderer.rs
src/components/: analysis_panel.rs  annotation_label_editor.rs  app.rs  axis_drag.rs  bar_pan.rs  bat_book_ref_panel.rs  bat_book_strip.rs  bat_book_tab.rs  bottom_toolbar.rs  chromagram_view.rs  combo_button.rs  debug_panel.rs  display_filter_button.rs  freq_range_button.rs  gutter.rs  hearing_bar.rs  hfr_bar.rs  hfr_button.rs  inertia.rs  listen_button.rs  mod.rs  mode_button.rs  noise_combos.rs  output_range_button.rs  overflow_menu.rs  overview.rs  pinch.rs  play_controls.rs  playhead.rs  popup.rs  right_sidebar.rs  selection_combo_button.rs  spectrogram.rs  spectrogram_events.rs  tool_button.rs  toolbar.rs  view_bar.rs  waveform.rs  xc_browser.rs  xform_button.rs  (+1 more)
src/components/file_sidebar/: analysis.rs  config_panel.rs  export_section.rs  file_groups.rs  files_panel.rs  harmonics.rs  loading.rs  metadata_panel.rs  mic_chooser.rs  mod.rs  notch_panel.rs  privacy_settings.rs  project_panel.rs  psd_panel.rs  pulse_panel.rs  settings_panel.rs  streaming_load.rs  suggestions.rs
src/dsp/: agc.rs  bit_analysis.rs  chromagram.rs  fft.rs  harmonics.rs  heterodyne.rs  mod.rs  notch.rs  phase_vocoder.rs  psd.rs  spectral_sub.rs  wsnr.rs  zc_divide.rs
xc-cli/src/: main.rs
xc-lib/: Cargo.toml
xc-lib/src/: api.rs  cache.rs  key_store.rs  taxonomy.rs  types.rs
