[workspace]
members = [".", "src-tauri", "xc-lib", "xc-cli"]

[package]
name = "batmonic"
version = "0.2.85"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "AudioContext",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "AudioParam",
    "AudioDestinationNode",
    "AudioNode",
    "BaseAudioContext",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "File",
    "FileReader",
    "FileReaderSync",
    "Blob",
    "Url",
    "HtmlInputElement",
    "MouseEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "WheelEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "Performance",
    "TextMetrics",
    "Response",
    "Navigator",
    "Clipboard",
    "History",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaStreamAudioSourceNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
realfft = "3"
hound = "3.5"
claxon = "0.4"
lewton = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
