[workspace]
members = [".", "src-tauri", "xc-lib", "xc-cli", "oversample-core", "oversample-ipc"]

[package]
name = "oversample"
version = "0.4.110"
edition = "2021"
license = "GPL-3.0-only"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oversample-core = { path = "oversample-core" }
oversample-ipc = { path = "oversample-ipc" }
leptos = { version = "0.8", features = ["csr"] }
reactive_stores = "0.4.2"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "ImageData",
    "AudioContext",
    "AudioContextState",
    "AudioContextOptions",
    "AudioBuffer",
    "AudioBufferSourceNode",
    "GainNode",
    "AudioParam",
    "AudioDestinationNode",
    "AudioNode",
    "BaseAudioContext",
    "DragEvent",
    "DataTransfer",
    "FileList",
    "File",
    "FileReader",
    "FileReaderSync",
    "Blob",
    "Url",
    "HtmlInputElement",
    "MouseEvent",
    "PointerEvent",
    "TouchEvent",
    "Touch",
    "TouchList",
    "WheelEvent",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "DomRect",
    "Event",
    "EventTarget",
    "Performance",
    "TextMetrics",
    "Response",
    "Navigator",
    "Clipboard",
    "History",
    "MediaDevices",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MediaStreamAudioSourceNode",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "FileSystemWritableFileStream",
    "WritableStream",
    "Storage",
    "NodeList",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "ScrollLogicalPosition",
    "ResizeObserver",
    "ResizeObserverEntry",
    "ResizeObserverSize",
] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
send_wrapper = "0.6"
realfft = "3"
hound = "3.5"
claxon = "0.4"
lewton = "0.10"
symphonia = { version = "0.6", default-features = false, features = ["mp3", "ogg", "vorbis", "isomp4", "aac", "alac", "all-meta"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
yaml_serde = "0.10"
sha2 = "0.11"
blake3 = { version = "1", default-features = false }

[profile.release]
opt-level = "s"
lto = true
