[package]
name = "batmonic-desktop"
version = "0.2.85"
edition = "2021"

[lib]
name = "batmonic_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
claxon = "0.4"
lewton = "0.10"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
chrono = "0.4"
xc-lib = { path = "../xc-lib" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs"] }

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
