[package]
name = "oversample-desktop"
version = "0.4.94"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "oversample_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0.222", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
hound = "3.5"
claxon = "0.4"
lewton = "0.10"
symphonia = { version = "0.6", default-features = false, features = ["mp3", "isomp4", "aac", "alac", "all-meta"] }
chrono = "0.4"
xc-lib = { path = "../xc-lib" }
oversample-core = { path = "../oversample-core" }
oversample-ipc = { path = "../oversample-ipc" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["fs"] }
[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.17"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
