[package]
name = "xc-lib"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Xeno-Canto API v3 client library with caching"

[dependencies]
oversample-ipc = { path = "../oversample-ipc" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["now", "serde"] }
sha2 = "0.11"
blake3 = "1"
fs4 = "0.13"  # OS advisory file lock to serialize index.json read-modify-write
